[gd_scene load_steps=2 format=3 uid="uid://cyfj9qm4n1xcv"]

[ext_resource type="Script" path="res://scripts/ui/ability_ui.gd" id="1_ui"]

[node name="AbilityUI" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -120.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ui")

[node name="EnergyBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="EnergyBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilitySlots" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Slot1" type="PanelContainer" parent="AbilitySlots"]
custom_minimum_size = Vector2(115, 65)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="AbilitySlots/Slot1"]
layout_mode = 2

[node name="Name" type="Label" parent="AbilitySlots/Slot1/VBox"]
layout_mode = 2
text = "Ability 1"
horizontal_alignment = 1

[node name="Key" type="Label" parent="AbilitySlots/Slot1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Q"
horizontal_alignment = 1

[node name="Cost" type="Label" parent="AbilitySlots/Slot1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost: 15"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="AbilitySlots/Slot1"]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="PanelContainer" parent="AbilitySlots"]
custom_minimum_size = Vector2(115, 65)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="AbilitySlots/Slot2"]
layout_mode = 2

[node name="Name" type="Label" parent="AbilitySlots/Slot2/VBox"]
layout_mode = 2
text = "Ability 2"
horizontal_alignment = 1

[node name="Key" type="Label" parent="AbilitySlots/Slot2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "E"
horizontal_alignment = 1

[node name="Cost" type="Label" parent="AbilitySlots/Slot2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost: 25"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="AbilitySlots/Slot2"]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="PanelContainer" parent="AbilitySlots"]
custom_minimum_size = Vector2(115, 65)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="AbilitySlots/Slot3"]
layout_mode = 2

[node name="Name" type="Label" parent="AbilitySlots/Slot3/VBox"]
layout_mode = 2
text = "Ability 3"
horizontal_alignment = 1

[node name="Key" type="Label" parent="AbilitySlots/Slot3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "R"
horizontal_alignment = 1

[node name="Cost" type="Label" parent="AbilitySlots/Slot3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost: 35"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="AbilitySlots/Slot3"]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot4" type="PanelContainer" parent="AbilitySlots"]
custom_minimum_size = Vector2(115, 65)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="AbilitySlots/Slot4"]
layout_mode = 2

[node name="Name" type="Label" parent="AbilitySlots/Slot4/VBox"]
layout_mode = 2
text = "Ability 4"
horizontal_alignment = 1

[node name="Key" type="Label" parent="AbilitySlots/Slot4/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "F"
horizontal_alignment = 1

[node name="Cost" type="Label" parent="AbilitySlots/Slot4/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost: 40"
horizontal_alignment = 1

[node name="Cooldown" type="Label" parent="AbilitySlots/Slot4"]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1
